interpretador/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On PROGRAM shift to state 1
-- On programa shift to state 155

State 1:
programa -> PROGRAM . PONTOVIRG list(declaracao_funcao) list(declaracao) BEGIN list(comando) ENDPROG EOF [ # ]
-- On PONTOVIRG shift to state 2

State 2:
programa -> PROGRAM PONTOVIRG . list(declaracao_funcao) list(declaracao) BEGIN list(comando) ENDPROG EOF [ # ]
-- On FUNCAO shift to state 3
-- On list(declaracao_funcao) shift to state 147
-- On declaracao_funcao shift to state 153
-- On VAR reduce production list(declaracao_funcao) -> 
-- On ID reduce production list(declaracao_funcao) -> 
-- On BEGIN reduce production list(declaracao_funcao) -> 

State 3:
declaracao_funcao -> FUNCAO . ID APAR list(parametros) FPAR DOISPONTOS tipo_simples PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On ID shift to state 4

State 4:
declaracao_funcao -> FUNCAO ID . APAR list(parametros) FPAR DOISPONTOS tipo_simples PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On APAR shift to state 5

State 5:
declaracao_funcao -> FUNCAO ID APAR . list(parametros) FPAR DOISPONTOS tipo_simples PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On ID shift to state 6
-- On separated_nonempty_list(VIRG,ID) shift to state 9
-- On parametros shift to state 10
-- On loption(separated_nonempty_list(VIRG,ID)) shift to state 11
-- On list(parametros) shift to state 20
-- On FPAR reduce production list(parametros) -> 
-- On DOISPONTOS reduce production loption(separated_nonempty_list(VIRG,ID)) -> 

State 6:
separated_nonempty_list(VIRG,ID) -> ID . [ DOISPONTOS ]
separated_nonempty_list(VIRG,ID) -> ID . VIRG separated_nonempty_list(VIRG,ID) [ DOISPONTOS ]
-- On VIRG shift to state 7
-- On DOISPONTOS reduce production separated_nonempty_list(VIRG,ID) -> ID 

State 7:
separated_nonempty_list(VIRG,ID) -> ID VIRG . separated_nonempty_list(VIRG,ID) [ DOISPONTOS ]
-- On ID shift to state 6
-- On separated_nonempty_list(VIRG,ID) shift to state 8

State 8:
separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) . [ DOISPONTOS ]
-- On DOISPONTOS reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 

State 9:
loption(separated_nonempty_list(VIRG,ID)) -> separated_nonempty_list(VIRG,ID) . [ DOISPONTOS ]
-- On DOISPONTOS reduce production loption(separated_nonempty_list(VIRG,ID)) -> separated_nonempty_list(VIRG,ID) 

State 10:
list(parametros) -> parametros . list(parametros) [ FPAR ]
-- On ID shift to state 6
-- On separated_nonempty_list(VIRG,ID) shift to state 9
-- On parametros shift to state 10
-- On loption(separated_nonempty_list(VIRG,ID)) shift to state 11
-- On list(parametros) shift to state 19
-- On FPAR reduce production list(parametros) -> 
-- On DOISPONTOS reduce production loption(separated_nonempty_list(VIRG,ID)) -> 

State 11:
parametros -> loption(separated_nonempty_list(VIRG,ID)) . DOISPONTOS tipo_simples [ ID FPAR DOISPONTOS ]
-- On DOISPONTOS shift to state 12

State 12:
parametros -> loption(separated_nonempty_list(VIRG,ID)) DOISPONTOS . tipo_simples [ ID FPAR DOISPONTOS ]
-- On STRING shift to state 13
-- On REAL shift to state 14
-- On INTEGER shift to state 15
-- On CHAR shift to state 16
-- On BOOLEAN shift to state 17
-- On tipo_simples shift to state 18

State 13:
tipo_simples -> STRING . [ PONTOVIRG ID FPAR DOISPONTOS ]
-- On PONTOVIRG reduce production tipo_simples -> STRING 
-- On ID reduce production tipo_simples -> STRING 
-- On FPAR reduce production tipo_simples -> STRING 
-- On DOISPONTOS reduce production tipo_simples -> STRING 

State 14:
tipo_simples -> REAL . [ PONTOVIRG ID FPAR DOISPONTOS ]
-- On PONTOVIRG reduce production tipo_simples -> REAL 
-- On ID reduce production tipo_simples -> REAL 
-- On FPAR reduce production tipo_simples -> REAL 
-- On DOISPONTOS reduce production tipo_simples -> REAL 

State 15:
tipo_simples -> INTEGER . [ PONTOVIRG ID FPAR DOISPONTOS ]
-- On PONTOVIRG reduce production tipo_simples -> INTEGER 
-- On ID reduce production tipo_simples -> INTEGER 
-- On FPAR reduce production tipo_simples -> INTEGER 
-- On DOISPONTOS reduce production tipo_simples -> INTEGER 

State 16:
tipo_simples -> CHAR . [ PONTOVIRG ID FPAR DOISPONTOS ]
-- On PONTOVIRG reduce production tipo_simples -> CHAR 
-- On ID reduce production tipo_simples -> CHAR 
-- On FPAR reduce production tipo_simples -> CHAR 
-- On DOISPONTOS reduce production tipo_simples -> CHAR 

State 17:
tipo_simples -> BOOLEAN . [ PONTOVIRG ID FPAR DOISPONTOS ]
-- On PONTOVIRG reduce production tipo_simples -> BOOLEAN 
-- On ID reduce production tipo_simples -> BOOLEAN 
-- On FPAR reduce production tipo_simples -> BOOLEAN 
-- On DOISPONTOS reduce production tipo_simples -> BOOLEAN 

State 18:
parametros -> loption(separated_nonempty_list(VIRG,ID)) DOISPONTOS tipo_simples . [ ID FPAR DOISPONTOS ]
-- On ID reduce production parametros -> loption(separated_nonempty_list(VIRG,ID)) DOISPONTOS tipo_simples 
-- On FPAR reduce production parametros -> loption(separated_nonempty_list(VIRG,ID)) DOISPONTOS tipo_simples 
-- On DOISPONTOS reduce production parametros -> loption(separated_nonempty_list(VIRG,ID)) DOISPONTOS tipo_simples 

State 19:
list(parametros) -> parametros list(parametros) . [ FPAR ]
-- On FPAR reduce production list(parametros) -> parametros list(parametros) 

State 20:
declaracao_funcao -> FUNCAO ID APAR list(parametros) . FPAR DOISPONTOS tipo_simples PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On FPAR shift to state 21

State 21:
declaracao_funcao -> FUNCAO ID APAR list(parametros) FPAR . DOISPONTOS tipo_simples PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On DOISPONTOS shift to state 22

State 22:
declaracao_funcao -> FUNCAO ID APAR list(parametros) FPAR DOISPONTOS . tipo_simples PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On STRING shift to state 13
-- On REAL shift to state 14
-- On INTEGER shift to state 15
-- On CHAR shift to state 16
-- On BOOLEAN shift to state 17
-- On tipo_simples shift to state 23

State 23:
declaracao_funcao -> FUNCAO ID APAR list(parametros) FPAR DOISPONTOS tipo_simples . PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On PONTOVIRG shift to state 24

State 24:
declaracao_funcao -> FUNCAO ID APAR list(parametros) FPAR DOISPONTOS tipo_simples PONTOVIRG . list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On VAR shift to state 25
-- On ID shift to state 6
-- On separated_nonempty_list(VIRG,ID) shift to state 31
-- On list(declaracao) shift to state 35
-- On declaracao shift to state 145
-- On BEGIN reduce production list(declaracao) -> 

State 25:
declaracao -> VAR . separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG [ VAR ID BEGIN ]
-- On ID shift to state 6
-- On separated_nonempty_list(VIRG,ID) shift to state 26

State 26:
declaracao -> VAR separated_nonempty_list(VIRG,ID) . DOISPONTOS tipo PONTOVIRG [ VAR ID BEGIN ]
-- On DOISPONTOS shift to state 27

State 27:
declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS . tipo PONTOVIRG [ VAR ID BEGIN ]
-- On STRING shift to state 13
-- On REAL shift to state 14
-- On INTEGER shift to state 15
-- On CHAR shift to state 16
-- On BOOLEAN shift to state 17
-- On tipo_simples shift to state 28
-- On tipo shift to state 29

State 28:
tipo -> tipo_simples . [ PONTOVIRG ]
-- On PONTOVIRG reduce production tipo -> tipo_simples 

State 29:
declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo . PONTOVIRG [ VAR ID BEGIN ]
-- On PONTOVIRG shift to state 30

State 30:
declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG . [ VAR ID BEGIN ]
-- On VAR reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG 
-- On ID reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG 
-- On BEGIN reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG 

State 31:
declaracao -> separated_nonempty_list(VIRG,ID) . DOISPONTOS tipo PONTOVIRG [ VAR ID BEGIN ]
-- On DOISPONTOS shift to state 32

State 32:
declaracao -> separated_nonempty_list(VIRG,ID) DOISPONTOS . tipo PONTOVIRG [ VAR ID BEGIN ]
-- On STRING shift to state 13
-- On REAL shift to state 14
-- On INTEGER shift to state 15
-- On CHAR shift to state 16
-- On BOOLEAN shift to state 17
-- On tipo_simples shift to state 28
-- On tipo shift to state 33

State 33:
declaracao -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo . PONTOVIRG [ VAR ID BEGIN ]
-- On PONTOVIRG shift to state 34

State 34:
declaracao -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG . [ VAR ID BEGIN ]
-- On VAR reduce production declaracao -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG 
-- On ID reduce production declaracao -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG 
-- On BEGIN reduce production declaracao -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG 

State 35:
declaracao_funcao -> FUNCAO ID APAR list(parametros) FPAR DOISPONTOS tipo_simples PONTOVIRG list(declaracao) . BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On BEGIN shift to state 36

State 36:
declaracao_funcao -> FUNCAO ID APAR list(parametros) FPAR DOISPONTOS tipo_simples PONTOVIRG list(declaracao) BEGIN . list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On WHILE shift to state 37
-- On PRINTLN shift to state 84
-- On PRINT shift to state 92
-- On LITSTRING shift to state 38
-- On LITREAL shift to state 39
-- On LITINT shift to state 40
-- On LEIALN shift to state 97
-- On LEIA shift to state 102
-- On IF shift to state 107
-- On ID shift to state 41
-- On FOR shift to state 111
-- On BOOL shift to state 44
-- On APAR shift to state 45
-- On list(comando) shift to state 142
-- On expressao shift to state 112
-- On comando_while shift to state 120
-- On comando_se shift to state 121
-- On comando_saida shift to state 122
-- On comando_funcao shift to state 123
-- On comando_for shift to state 124
-- On comando_entrada shift to state 125
-- On comando_atribuicao shift to state 126
-- On comando shift to state 136
-- On chamada shift to state 128
-- On END reduce production list(comando) -> 

State 37:
comando_while -> WHILE . expressao DO BEGIN list(comando) END PONTOVIRG [ WHILE PRINTLN PRINT LITSTRING LITREAL LITINT LEIALN LEIA IF ID FOR ENDPROG END BOOL APAR ]
-- On LITSTRING shift to state 38
-- On LITREAL shift to state 39
-- On LITINT shift to state 40
-- On ID shift to state 41
-- On BOOL shift to state 44
-- On APAR shift to state 45
-- On expressao shift to state 81
-- On chamada shift to state 51

State 38:
expressao -> LITSTRING . [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
-- On VIRG reduce production expressao -> LITSTRING 
-- On THEN reduce production expressao -> LITSTRING 
-- On PONTOVIRG reduce production expressao -> LITSTRING 
-- On OU reduce production expressao -> LITSTRING 
-- On MULTIPLICA reduce production expressao -> LITSTRING 
-- On MODULO reduce production expressao -> LITSTRING 
-- On MENOS reduce production expressao -> LITSTRING 
-- On MENORIGUAL reduce production expressao -> LITSTRING 
-- On MENOR reduce production expressao -> LITSTRING 
-- On MAIS reduce production expressao -> LITSTRING 
-- On MAIORIGUAL reduce production expressao -> LITSTRING 
-- On MAIOR reduce production expressao -> LITSTRING 
-- On IGUAL reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On E reduce production expressao -> LITSTRING 
-- On DO reduce production expressao -> LITSTRING 
-- On DIVIDE reduce production expressao -> LITSTRING 
-- On DIFERENTE reduce production expressao -> LITSTRING 
-- On ATRIB reduce production expressao -> LITSTRING 

State 39:
expressao -> LITREAL . [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
-- On VIRG reduce production expressao -> LITREAL 
-- On THEN reduce production expressao -> LITREAL 
-- On PONTOVIRG reduce production expressao -> LITREAL 
-- On OU reduce production expressao -> LITREAL 
-- On MULTIPLICA reduce production expressao -> LITREAL 
-- On MODULO reduce production expressao -> LITREAL 
-- On MENOS reduce production expressao -> LITREAL 
-- On MENORIGUAL reduce production expressao -> LITREAL 
-- On MENOR reduce production expressao -> LITREAL 
-- On MAIS reduce production expressao -> LITREAL 
-- On MAIORIGUAL reduce production expressao -> LITREAL 
-- On MAIOR reduce production expressao -> LITREAL 
-- On IGUAL reduce production expressao -> LITREAL 
-- On FPAR reduce production expressao -> LITREAL 
-- On E reduce production expressao -> LITREAL 
-- On DO reduce production expressao -> LITREAL 
-- On DIVIDE reduce production expressao -> LITREAL 
-- On DIFERENTE reduce production expressao -> LITREAL 
-- On ATRIB reduce production expressao -> LITREAL 

State 40:
expressao -> LITINT . [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
-- On VIRG reduce production expressao -> LITINT 
-- On THEN reduce production expressao -> LITINT 
-- On PONTOVIRG reduce production expressao -> LITINT 
-- On OU reduce production expressao -> LITINT 
-- On MULTIPLICA reduce production expressao -> LITINT 
-- On MODULO reduce production expressao -> LITINT 
-- On MENOS reduce production expressao -> LITINT 
-- On MENORIGUAL reduce production expressao -> LITINT 
-- On MENOR reduce production expressao -> LITINT 
-- On MAIS reduce production expressao -> LITINT 
-- On MAIORIGUAL reduce production expressao -> LITINT 
-- On MAIOR reduce production expressao -> LITINT 
-- On IGUAL reduce production expressao -> LITINT 
-- On FPAR reduce production expressao -> LITINT 
-- On E reduce production expressao -> LITINT 
-- On DO reduce production expressao -> LITINT 
-- On DIVIDE reduce production expressao -> LITINT 
-- On DIFERENTE reduce production expressao -> LITINT 
-- On ATRIB reduce production expressao -> LITINT 

State 41:
chamada -> ID . args [ WHILE VIRG THEN PRINTLN PRINT PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITREAL LITINT LEIALN LEIA IGUAL IF ID FPAR FOR ENDPROG END E DO DIVIDE DIFERENTE BOOL ATRIB APAR ]
expressao -> ID . [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
-- On APAR shift to state 42
-- On args shift to state 80
-- On VIRG reduce production expressao -> ID 
-- On THEN reduce production expressao -> ID 
-- On PONTOVIRG reduce production expressao -> ID 
-- On OU reduce production expressao -> ID 
-- On MULTIPLICA reduce production expressao -> ID 
-- On MODULO reduce production expressao -> ID 
-- On MENOS reduce production expressao -> ID 
-- On MENORIGUAL reduce production expressao -> ID 
-- On MENOR reduce production expressao -> ID 
-- On MAIS reduce production expressao -> ID 
-- On MAIORIGUAL reduce production expressao -> ID 
-- On MAIOR reduce production expressao -> ID 
-- On IGUAL reduce production expressao -> ID 
-- On FPAR reduce production expressao -> ID 
-- On E reduce production expressao -> ID 
-- On DO reduce production expressao -> ID 
-- On DIVIDE reduce production expressao -> ID 
-- On DIFERENTE reduce production expressao -> ID 
-- On ATRIB reduce production expressao -> ID 

State 42:
args -> APAR . FPAR [ WHILE VIRG THEN PRINTLN PRINT PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITREAL LITINT LEIALN LEIA IGUAL IF ID FPAR FOR ENDPROG END E DO DIVIDE DIFERENTE BOOL ATRIB APAR ]
args -> APAR . seq_args FPAR [ WHILE VIRG THEN PRINTLN PRINT PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITREAL LITINT LEIALN LEIA IGUAL IF ID FPAR FOR ENDPROG END E DO DIVIDE DIFERENTE BOOL ATRIB APAR ]
-- On LITSTRING shift to state 38
-- On LITREAL shift to state 39
-- On LITINT shift to state 40
-- On ID shift to state 41
-- On FPAR shift to state 43
-- On BOOL shift to state 44
-- On APAR shift to state 45
-- On seq_args shift to state 75
-- On expressao shift to state 79
-- On chamada shift to state 51

State 43:
args -> APAR FPAR . [ WHILE VIRG THEN PRINTLN PRINT PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITREAL LITINT LEIALN LEIA IGUAL IF ID FPAR FOR ENDPROG END E DO DIVIDE DIFERENTE BOOL ATRIB APAR ]
-- On WHILE reduce production args -> APAR FPAR 
-- On VIRG reduce production args -> APAR FPAR 
-- On THEN reduce production args -> APAR FPAR 
-- On PRINTLN reduce production args -> APAR FPAR 
-- On PRINT reduce production args -> APAR FPAR 
-- On PONTOVIRG reduce production args -> APAR FPAR 
-- On OU reduce production args -> APAR FPAR 
-- On MULTIPLICA reduce production args -> APAR FPAR 
-- On MODULO reduce production args -> APAR FPAR 
-- On MENOS reduce production args -> APAR FPAR 
-- On MENORIGUAL reduce production args -> APAR FPAR 
-- On MENOR reduce production args -> APAR FPAR 
-- On MAIS reduce production args -> APAR FPAR 
-- On MAIORIGUAL reduce production args -> APAR FPAR 
-- On MAIOR reduce production args -> APAR FPAR 
-- On LITSTRING reduce production args -> APAR FPAR 
-- On LITREAL reduce production args -> APAR FPAR 
-- On LITINT reduce production args -> APAR FPAR 
-- On LEIALN reduce production args -> APAR FPAR 
-- On LEIA reduce production args -> APAR FPAR 
-- On IGUAL reduce production args -> APAR FPAR 
-- On IF reduce production args -> APAR FPAR 
-- On ID reduce production args -> APAR FPAR 
-- On FPAR reduce production args -> APAR FPAR 
-- On FOR reduce production args -> APAR FPAR 
-- On ENDPROG reduce production args -> APAR FPAR 
-- On END reduce production args -> APAR FPAR 
-- On E reduce production args -> APAR FPAR 
-- On DO reduce production args -> APAR FPAR 
-- On DIVIDE reduce production args -> APAR FPAR 
-- On DIFERENTE reduce production args -> APAR FPAR 
-- On BOOL reduce production args -> APAR FPAR 
-- On ATRIB reduce production args -> APAR FPAR 
-- On APAR reduce production args -> APAR FPAR 

State 44:
expressao -> BOOL . [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
-- On VIRG reduce production expressao -> BOOL 
-- On THEN reduce production expressao -> BOOL 
-- On PONTOVIRG reduce production expressao -> BOOL 
-- On OU reduce production expressao -> BOOL 
-- On MULTIPLICA reduce production expressao -> BOOL 
-- On MODULO reduce production expressao -> BOOL 
-- On MENOS reduce production expressao -> BOOL 
-- On MENORIGUAL reduce production expressao -> BOOL 
-- On MENOR reduce production expressao -> BOOL 
-- On MAIS reduce production expressao -> BOOL 
-- On MAIORIGUAL reduce production expressao -> BOOL 
-- On MAIOR reduce production expressao -> BOOL 
-- On IGUAL reduce production expressao -> BOOL 
-- On FPAR reduce production expressao -> BOOL 
-- On E reduce production expressao -> BOOL 
-- On DO reduce production expressao -> BOOL 
-- On DIVIDE reduce production expressao -> BOOL 
-- On DIFERENTE reduce production expressao -> BOOL 
-- On ATRIB reduce production expressao -> BOOL 

State 45:
expressao -> APAR . expressao FPAR [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
-- On LITSTRING shift to state 38
-- On LITREAL shift to state 39
-- On LITINT shift to state 40
-- On ID shift to state 41
-- On BOOL shift to state 44
-- On APAR shift to state 45
-- On expressao shift to state 46
-- On chamada shift to state 51

State 46:
expressao -> expressao . MAIS expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MENOS expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MULTIPLICA expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . DIVIDE expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MODULO expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MENOR expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . IGUAL expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MENORIGUAL expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MAIORIGUAL expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . DIFERENTE expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MAIOR expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . E expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . OU expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> APAR expressao . FPAR [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
-- On OU shift to state 47
-- On MULTIPLICA shift to state 49
-- On MODULO shift to state 52
-- On MENOS shift to state 54
-- On MENORIGUAL shift to state 58
-- On MENOR shift to state 62
-- On MAIS shift to state 60
-- On MAIORIGUAL shift to state 64
-- On MAIOR shift to state 66
-- On IGUAL shift to state 68
-- On FPAR shift to state 74
-- On E shift to state 70
-- On DIVIDE shift to state 56
-- On DIFERENTE shift to state 72

State 47:
expressao -> expressao OU . expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
-- On LITSTRING shift to state 38
-- On LITREAL shift to state 39
-- On LITINT shift to state 40
-- On ID shift to state 41
-- On BOOL shift to state 44
-- On APAR shift to state 45
-- On expressao shift to state 48
-- On chamada shift to state 51

State 48:
expressao -> expressao . MAIS expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao . MENOS expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao . MULTIPLICA expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao . DIVIDE expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao . MODULO expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao . MENOR expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao . IGUAL expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao . MENORIGUAL expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao . MAIORIGUAL expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao . DIFERENTE expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao . MAIOR expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao . E expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao . OU expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
expressao -> expressao OU expressao . [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
-- On MULTIPLICA shift to state 49
-- On MODULO shift to state 52
-- On MENOS shift to state 54
-- On MENORIGUAL shift to state 58
-- On MENOR shift to state 62
-- On MAIS shift to state 60
-- On MAIORIGUAL shift to state 64
-- On MAIOR shift to state 66
-- On IGUAL shift to state 68
-- On E shift to state 70
-- On DIVIDE shift to state 56
-- On DIFERENTE shift to state 72
-- On VIRG reduce production expressao -> expressao OU expressao 
-- On THEN reduce production expressao -> expressao OU expressao 
-- On PONTOVIRG reduce production expressao -> expressao OU expressao 
-- On OU reduce production expressao -> expressao OU expressao 
-- On FPAR reduce production expressao -> expressao OU expressao 
-- On DO reduce production expressao -> expressao OU expressao 
-- On ATRIB reduce production expressao -> expressao OU expressao 

State 49:
expressao -> expressao MULTIPLICA . expressao [ VIRG THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DO DIVIDE DIFERENTE ATRIB ]
-- On LITSTRING shift to state 38
-- On LITREAL shift to state 39
-- On LITINT shift to state 40
-- On ID shift to state 41
-- On BOOL shift to state 44
-- On APAR shift to state 45
-- On expressao shift to state 50
-- On chamada shift to state 51
